infrastructure/controllers/longhorn/middleware_traefik_longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-auth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://oauth2-proxy.longhorn-system.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
    setXAuthRequest: true
