infrastructure/controllers/longhorn/patch-manager-backup-volume.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  template:
    spec:
      containers:
        - name: longhorn-manager
          volumeMounts:
            - name: longhorn-backup-nfs
              mountPath: /var/lib/longhorn-backup
      volumes:
        - name: longhorn-backup-nfs
          persistentVolumeClaim:
            claimName: longhorn-backup-nfs
