infrastructure/controllers/longhorn/service-longhorn-metrics-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-metrics-nodeport
  namespace: longhorn-system
  labels:
    app: longhorn-manager
    app.kubernetes.io/component: metrics
spec:
  type: NodePort
  ports:
    - name: metrics
      port: 9500
      targetPort: 9500
      nodePort: 30102
      protocol: TCP
  selector:
    app: longhorn-manager
