infrastructure/controllers/longhorn/ingressroute-longhorn-oauth2.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-oauth2
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.xrs444.net`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: longhorn-oauth2-proxy
          port: 4180
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
