infrastructure/controllers/longhorn/ingressroute-longhorn-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.xrs444.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
